Remove unused images, new image for about tab and add links on header logo and work slider

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <!-- notification for small viewports and landscape oriented smartphones -->
 <div class="device-notification">
-  <a class="device-notification--logo" href="/">
+  <a class="device-notification--logo" href="https://lucasarvelo.com">
     <img src="assets/img/logo.png" alt="Lucas Arvelo" "logo">
     <p>Lucas Arvelo</p>
   </a>
@@ -28,7 +28,7 @@
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
         <header class="header">
-          <a class="header--logo" href="#0">
+          <a class="header--logo" href="https://lucasarvelo.com">
             <img src="assets/img/logo.png" alt="Lucas Arvelo" class = "logo">
             <p>Lucas Arvelo</p>
           </a>
@@ -96,30 +96,30 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://www.youtube.com/watch?v=FuToVgxbYh8">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-cs50-finalproject.png" alt="Victory">
+                        <img src="assets/img/work-cs50-finalproject.png" alt="CS50 Final Project">
                       </div>
                       <p class="slider--item-title">CS50 Final Project</p>
-                      <p class="slider--item-description">App to keep control of your boardgame inventory <i class = "devicon-python-plain-wordmark"></i> <i class = "devicon-jquery-plain-wordmark"></i> <i class = "devicon-html5-plain-wordmark"></i> <i class="devicon-bootstrap-plain-wordmark"></i></p>
+                      <p class="slider--item-description">App to keep control of your boardgames inventory <i class = "devicon-python-plain-wordmark"></i> <i class = "devicon-jquery-plain-wordmark"></i> <i class = "devicon-html5-plain-wordmark"></i> <i class="devicon-bootstrap-plain-wordmark"></i></p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://codepen.io/lucasarvelo/">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-codepen.png" alt="Metiew and Smith">
+                        <img src="assets/img/work-codepen.png" alt="Codepen Profile">
                       </div>
                       <p class="slider--item-title">Codepen</p>
                       <p class="slider--item-description">My profile in codepen is full of projects for freecodecamp.org</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://github.com/lucasarvelo">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-blue-github.png" alt="Alex Nowak">
+                        <img src="assets/img/work-blue-github.png" alt="Github Profile">
                       </div>
-                      <p class="slider--item-title">My Github Profile</p>
-                      <p class="slider--item-description">You'll find some of my projects here, remenber visit their hitgub pages</p>
+                      <p class="slider--item-title">My Github profile</p>
+                      <p class="slider--item-description">you can read the code for this website and some of my projects</p>
                     </a>
                   </li>
                 </ul>
@@ -156,7 +156,7 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Us">
+                <img src="assets/img/code-about.png" alt="About Us">
               </div>
               <div class="about--options">
                 <a href="#0">
