--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     <i class="devicon-git-plain-wordmark"></i>
                   </p>
                 </a>
-                <a href="#0">
+                
+                <a href="#modal-find-me" rel="modal:open" class="open-modal">
                   <h3>Where to find me</h3>
                   <p>
                     <i class="devicon-github-plain-wordmark"></i>
@@ -174,13 +175,13 @@
           <li class="l-section section">
             <div class="contact">
               <div class="contact--lockup">
-                <div class="modal">
-                  <div class="modal--information">
+                <div class="modal-contact">
+                  <div class="modal-contact--information">
                     <p>Ontario, Canada</p>
                     <a href="mailto:webcontact@lucasarvelo.com">webcontact@lucasarvelo.com</a>
                     <a href="tel:+12048065275">+1 (204) 806-5275</a>
                   </div>
-                  <ul class="modal--options">
+                  <ul class="modal-contact--options">
                     <li><a href="#0">Skype</a></li>
                     <li><a href="#0">TXT</a></li>
                     <li><a href="mailto:webcontact@lucasarvelo.com">Contact Us</a></li>
@@ -287,9 +288,23 @@
   </ul>
 </div>
 
+<!--Modals-->
+<div id="modal-find-me" class="modal-customization modal">
+    <h3>Do not hesitate to contact me if you have any questions, I'll be happy to help you</h3>
+    <p class="modal-content">
+      <i class="devicon-github-plain-wordmark"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-linkedin-in"></i>
+      <i class="fab fa-free-code-camp"></i>
+    </p>
+</div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
 <script src="assets/js/vendor/hammer-2.0.8.js"></script>
-<script src="assets/js/functions-min.js"></script>
+<script src="assets/js/functions.min.js"></script>
+<!-- jQuery Modal -->
+<script src="assets/js/vendor/jquery.modal.min.js"></script>
+<link rel="stylesheet" href="assets/css/vendor/jquery.modal.min.css" />
 </body>
 </html>
