--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <img src="assets/img/work-blue-github.png" alt="Github Profile">
                       </div>
                       <p class="slider--item-title">My Github profile</p>
-                      <p class="slider--item-description">you can read the code for this website and some of my projects</p>
+                      <p class="slider--item-description">you can find the code for this website and some of my projects</p>
                     </a>
                   </li>
                 </ul>
@@ -292,10 +292,10 @@
 <div id="modal-find-me" class="modal-customization modal">
     <h3>Do not hesitate to contact me if you have any questions, I'll be happy to help you</h3>
     <p class="modal-content">
-      <i class="devicon-github-plain-wordmark"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-linkedin-in"></i>
-      <i class="fab fa-free-code-camp"></i>
+      <a href="https://github.com/lucasarvelo"><i class="devicon-github-plain-wordmark"></i></a>
+      <a href="https://twitter.com/lucasarvelo"><i class="fab fa-twitter"></i></a>
+      <a href="https://linkedin.com/in/lucasarvelo"><i class="fab fa-linkedin-in"></i></a>
+      <a href="https://www.freecodecamp.org/lucasarvelo"><i class="fab fa-free-code-camp"></i></a>
     </p>
 </div>
 
