Add modals for about and skills links in home section

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                 <img src="assets/img/introduction-visual.png" alt="Welcome">
               </div>
               <div class="intro--options">
-                <a href="#0">
+                <a href="#modal-about-me" rel="modal:open" class="open-modal">
                   <h3>About Me</h3>
                   <p>Fanatic of problem solving and create practical solutions for each situation. I moved to Canada in 2014 and I currently reside in London, Ontario.</p>
                 </a>
-                <a href="#0">
+                <a href="#modal-skills" rel="modal:open" class="open-modal">
                   <h3>Skills</h3>
                   <p>
                     <i class="devicon-html5-plain-wordmark"></i>
@@ -102,7 +102,7 @@
                         <img src="assets/img/work-cs50-finalproject.png" alt="CS50 Final Project">
                       </div>
                       <p class="slider--item-title">CS50 Final Project</p>
-                      <p class="slider--item-description">App to keep control of your boardgames inventory <i class = "devicon-python-plain-wordmark"></i> <i class = "devicon-jquery-plain-wordmark"></i> <i class = "devicon-html5-plain-wordmark"></i> <i class="devicon-bootstrap-plain-wordmark"></i></p>
+                      <p class="slider--item-description">App to keep control of your board games inventory <i class = "devicon-python-plain-wordmark"></i> <i class = "devicon-jquery-plain-wordmark"></i> <i class = "devicon-html5-plain-wordmark"></i> <i class="devicon-bootstrap-plain-wordmark"></i></p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
@@ -147,7 +147,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>I<br>believe in<br>passionate<br>people</h2>
                 <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -296,6 +296,44 @@
       <a href="https://twitter.com/lucasarvelo"><i class="fab fa-twitter"></i></a>
       <a href="https://linkedin.com/in/lucasarvelo"><i class="fab fa-linkedin-in"></i></a>
       <a href="https://www.freecodecamp.org/lucasarvelo"><i class="fab fa-free-code-camp"></i></a>
+    </p>
+</div>
+
+<div id="modal-skills" class="modal-customization modal">
+  <h3>Skills</h3>
+  <p>
+    <b>FreeCodeCamp.org</b><br>
+    - Front-End Certificate<br>
+    <br>
+    <b>Harvard Extension School</b><br>
+    - Introduction to Computer Science<br>
+    <br>
+    <b>CEAD</b><br>
+    - Installation and Maintenance of PCs and Networks<br>
+    <br>
+    <b>Edx</b><br>
+    - Introduction to Linux<br>
+    <br>
+    <b>Canadian Manufacturers and Exporters</b><br>
+    - Continuous Improvement 101 Program<br>
+    - Leadership Developer Program<br>
+  </p>  
+</div>
+
+<div id="modal-about-me" class="modal-customization modal">
+  <h3>About Me</h3>
+    <p>
+      Hi, I'm Lucas Arvelo, a web developer originally from Spain who is currently living in London, Ontario.<br>
+      <br>
+      I moved to Canada in 2014 from the Canary Islands with my wife and son, since then I have been working in manufacturing, starting as a general worker and progressing to become manager of a department with up to 10 people under my supervision, learning leadership and continuous improvement techniques along the way.<br>
+      <br>
+      Technology has always been my hobby and I have spent years as a self-taught developer doing some freelance and personal projects, besides, in the last two years I have dedicated to study and practice in depth web technologies.<br>
+      <br>
+      If you want to know more about me do not hesitate to contact me,  I'll be happy to have a coffee and talk about the latest tasty treats in the world of web technologies.<br>
+      <br>
+      Have a beautiful day!!!<br>
+      <br>
+      Lucas Arvelo
     </p>
 </div>
 
