--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="about">
               <div class="about--banner">
                 <h2>I<br>believe in<br>passionate<br>people</h2>
-                <a href="#0">Career
+                <a href="#modal-about-me" rel="modal:open" class="open-modal">About Me
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -160,14 +160,14 @@
                 <img src="assets/img/code-about.png" alt="About Us">
               </div>
               <div class="about--options">
-                <a href="#0">
-                  <h3>Winners</h3>
+                <a href="https://forum.freecodecamp.org/">
+                  <h3>FreeCodeCamp.org</h3>
                 </a>
-                <a href="#0">
-                  <h3>Philosophy</h3>
+                <a href="https://codebuddies.org/">
+                  <h3>CodeBuddies</h3>
                 </a>
-                <a href="#0">
-                  <h3>History</h3>
+                <a href="http://completedevelopernetwork.com/">
+                  <h3>CDN</h3>
                 </a>
               </div>
             </div>
@@ -182,9 +182,9 @@
                     <a href="tel:+12048065275">+1 (204) 806-5275</a>
                   </div>
                   <ul class="modal-contact--options">
-                    <li><a href="#0">Skype</a></li>
-                    <li><a href="#0">TXT</a></li>
-                    <li><a href="mailto:webcontact@lucasarvelo.com">Contact Us</a></li>
+                    <li><a href="skype:lucasarvelo?call">Skype</a></li>
+                    <li><a href="twitter" onClick="window.open('https://twitter.com/intent/user?screen_name=lucasarvelo','Twitter','resizable,height=600,width=600'); return false;">Twitter</a></li>
+                    <li><a href="\assets\vCard.vcf">VCard</a></li>
                   </ul>
                 </div>
               </div>
@@ -192,7 +192,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want me to do</h2>
+              <h2>How can I help you?</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
