--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <div class="contact--lockup">
                 <div class="modal-contact">
                   <div class="modal-contact--information">
-                    <p>Ontario, Canada</p>
+                    <p>London<br>Ontario, Canada</p>
                     <a href="mailto:webcontact@lucasarvelo.com">webcontact@lucasarvelo.com</a>
                     <a href="tel:+12048065275">+1 (204) 806-5275</a>
                   </div>
