--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </svg>
                     <span class="btn-background"></span>
                   </button>
-                  <img src="assets/img/introduction-visual.png" alt="Welcome">
+                  <img src="assets/img/introduction-visual.jpg" alt="Welcome">
                 </div>
                 <div class="intro--options">
                   <a href="#modal-about-me" rel="modal:open" class="open-modal">
