Fix extension .PNG to .png to make it work in GitHub pages

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <li class="slider--item slider--item-left">
                       <a href="https://www.youtube.com/watch?v=FuToVgxbYh8">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-cs50-finalproject.png" alt="CS50 Final Project">
+                          <img src="assets/img/work-cs50.png" alt="CS50 Final Project">
                         </div>
                         <p class="slider--item-title">CS50 Final Project</p>
                         <p class="slider--item-description">App to keep control of your board games inventory
