Add the Blog section and a hundred more things

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Lucas Arvelo - Portfolio">
   <meta name="keywords" content="lucas arvelo, portfolio, developer, javascript, html, css, web, front">
   <meta name="author" content="Lucas Arvelo">
+  <link rel="icon" href="https://res.cloudinary.com/lucasarvelo/image/upload/v1559000331/lucasarvelo.com/logoIcon.ico">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
     crossorigin="anonymous">
@@ -20,7 +21,7 @@
   <!-- notification for small viewports and landscape oriented smartphones -->
   <div class="device-notification">
     <a class="device-notification--logo" href="https://lucasarvelo.com">
-      <img src="assets/img/logo.png" alt="Lucas Arvelo" "logo">
+      <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999009/lucasarvelo.com/logo.png" onerror='this.onerror = null; this.src="assets/img/logo.png"' alt="Lucas Arvelo Logo" class="logo">
       <p>Lucas Arvelo</p>
     </a>
     <p class="device-notification--message">LucasArvelo.com has so much to offer that I must request you orient your device to portrait or find a larger screen.
@@ -34,7 +35,7 @@
         <div class="l-wrapper">
           <header class="header">
             <a class="header--logo" href="https://lucasarvelo.com">
-              <img src="assets/img/logo.png" alt="Lucas Arvelo" class="logo">
+              <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999009/lucasarvelo.com/logo.png" onerror='this.onerror = null; this.src="assets/img/logo.png"' alt="Lucas Arvelo Logo" class="logo">
               <p>Lucas Arvelo</p>
             </a>
             <button class="header--cta cta">Hire Me</button>
@@ -52,6 +53,9 @@
               </li>
               <li>
                 <span>About</span>
+              </li>
+              <li>
+                <span>Blog</span>
               </li>
               <li>
                 <span>Contact</span>
@@ -81,7 +85,7 @@
                     </svg>
                     <span class="btn-background"></span>
                   </button>
-                  <img src="assets/img/introduction-visual.jpg" alt="Welcome">
+                  <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999010/lucasarvelo.com/introduction-visual.png" onerror='this.onerror = null; this.src="assets/img/introduction-visual.jpg"' alt="Some javascript code">
                 </div>
                 <div class="intro--options">
                   <a href="#modal-about-me" rel="modal:open" class="open-modal">
@@ -94,10 +98,11 @@
                     <p>
                       <i class="devicon-html5-plain-wordmark"></i>
                       <i class="devicon-css3-plain-wordmark"></i>
+                      <i class="devicon-sass-original"></i>
                       <i class="devicon-javascript-plain"></i>
                       <i class="devicon-jquery-plain-wordmark"></i>
-                      <i class="devicon-mysql-plain-wordmark"></i>
-                      <i class="devicon-python-plain-wordmark"></i>
+                      <i class="devicon-react-original-wordmark"></i>
+                      <i class="devicon-bootstrap-plain-wordmark"></i>
                       <i class="devicon-git-plain-wordmark"></i>
                     </p>
                   </a>
@@ -122,7 +127,7 @@
                     <li class="slider--item slider--item-left">
                       <a href="https://www.youtube.com/watch?v=FuToVgxbYh8">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-cs50.png" alt="CS50 Final Project">
+                          <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999012/lucasarvelo.com/work-cs50.png" onerror='this.onerror = null; this.src="assets/img/work-cs50.png"' alt="CS50 Final Project">
                         </div>
                         <p class="slider--item-title">CS50 Final Project</p>
                         <p class="slider--item-description">App to keep control of your board games inventory
@@ -136,19 +141,19 @@
                     <li class="slider--item slider--item-center">
                       <a href="https://codepen.io/lucasarvelo/">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-codepen.png" alt="Codepen Profile">
+                          <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999010/lucasarvelo.com/work-codepen.png" onerror='this.onerror = null; this.src="assets/img/work-codepen.png"' alt="Codepen Logo">
                         </div>
                         <p class="slider--item-title">Codepen</p>
-                        <p class="slider--item-description">My profile in codepen is full of projects for freecodecamp.org</p>
+                        <p class="slider--item-description">My profile in codepen is full of projects for freecodecamp</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item-right">
                       <a href="https://github.com/lucasarvelo">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-blue-github.png" alt="Github Profile">
+                          <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999010/lucasarvelo.com/work-blue-github.png" onerror='this.onerror = null; this.src="assets/img/work-blue-github.png"' alt="Github Logo">
                         </div>
-                        <p class="slider--item-title">My Github profile</p>
-                        <p class="slider--item-description">you can find the code for this website and some of my projects</p>
+                        <p class="slider--item-title">Github</p>
+                        <p class="slider--item-description">You can find the code for this website and some of my projects</p>
                       </a>
                     </li>
                   </ul>
@@ -192,7 +197,7 @@
                       </svg>
                     </span>
                   </a>
-                  <img src="assets/img/code-about.png" alt="About Us">
+                  <img src="https://res.cloudinary.com/lucasarvelo/image/upload/v1558999010/lucasarvelo.com/code-about.png" onerror='this.onerror = null; this.src="assets/img/code-about.png"' alt="Some javascript code">
                 </div>
                 <div class="about--options">
                   <a href="https://forum.freecodecamp.org/">
@@ -203,6 +208,58 @@
                   </a>
                   <a href="http://completedevelopernetwork.com/">
                     <h3>CDN</h3>
+                  </a>
+                </div>
+              </div>
+            </li>
+            <li class="l-section section section">
+              <div class="blog">
+                <div class="blog--banner">
+                  <h1>
+                    <span>Blog</span>
+                    <br />
+                    <br />
+                    <br />
+                  </h1>
+                  <a href="https://blog.lucasarvelo.com">Visit Blog
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                      viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
+                      <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
+                        <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"
+                        />
+                      </g>
+                    </svg>
+                    <span class="btn-background"></span>
+                  </a>
+                  <img src="https://res.cloudinary.com/lucasarvelo/image/upload/c_scale,dpr_1.0,w_600/v1558998754/lucasarvelo.com/blogging-blur-communication-261662.jpg" alt="Welcome">
+                </div>
+                <div class="blog--options">
+                  <a href="#modal-about-me" rel="modal:open" class="open-modal">
+                    <h3>About Me</h3>
+                    <p>Fanatic of problem solving and create practical solutions for each situation. I moved to Canada in 2014
+                      and I currently reside in London, Ontario.</p>
+                  </a>
+                  <a href="#modal-skills" rel="modal:open" class="open-modal">
+                    <h3>Skills</h3>
+                    <p>
+                      <i class="devicon-html5-plain-wordmark"></i>
+                      <i class="devicon-css3-plain-wordmark"></i>
+                      <i class="devicon-javascript-plain"></i>
+                      <i class="devicon-jquery-plain-wordmark"></i>
+                      <i class="devicon-mysql-plain-wordmark"></i>
+                      <i class="devicon-python-plain-wordmark"></i>
+                      <i class="devicon-git-plain-wordmark"></i>
+                    </p>
+                  </a>
+
+                  <a href="#modal-find-me" rel="modal:open" class="open-modal">
+                    <h3>Where to find me</h3>
+                    <p>
+                      <i class="devicon-github-plain-wordmark"></i>
+                      <i class="fab fa-twitter"></i>
+                      <i class="fab fa-linkedin-in"></i>
+                      <i class="fab fa-free-code-camp"></i>
+                    </p>
                   </a>
                 </div>
               </div>
@@ -248,7 +305,7 @@
                             />
                           </g>
                         </svg>
-                        Website
+                        Build Website
                       </label>
                       <input id="opt-2" type="checkbox" value="drink-coffee" name="option">
                       <label for="opt-2">
@@ -259,7 +316,7 @@
                             />
                           </g>
                         </svg>
-                        Drink Coffee
+                        Fix Bug
                       </label>
                       <input id="opt-3" type="checkbox" value="question" name="option">
                       <label for="opt-3">
@@ -270,7 +327,7 @@
                             />
                           </g>
                         </svg>
-                        Question
+                        Answer Questions
                       </label>
                     </span>
                     <span class="options-b">
@@ -283,7 +340,7 @@
                             />
                           </g>
                         </svg>
-                        E-Commerce
+                        Build E-Commerce
                       </label>
                       <input id="opt-5" type="checkbox" value="free-quote" name="option">
                       <label for="opt-5">
@@ -329,8 +386,9 @@
     </div>
     <ul class="outer-nav">
       <li class="is-active">Home</li>
-      <li>Works</li>
+      <li>Projects</li>
       <li>About</li>
+      <li>Blog</li>
       <li>Contact</li>
       <li>Hire Me</li>
     </ul>
@@ -404,7 +462,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
-    window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.3.1.min.js"><\/script>')
+    window.jQuery || document.write('<script src="assets/js/vendor/jquery-3.4.1.min.js"><\/script>')
   </script>
   <script src="assets/js/vendor/hammer-2.0.8.js"></script>
   <script src="assets/js/functions.min.js"></script>
